Thu Jul 27 02:59:05 1995        Chris Provenzano (proven@mit.edu)
        * kdb5_mkdums.c : Use new kdb format.

Mon Jul 17 15:23:24 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb5_mkdums.c - Change setting of defaulted keytype to be DEFAULT_
		KDC_ETYPE instead of using the keytype array to find the
		etype.


Wed Jul 12 12:31:27 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Remove V5_USE_SHARED_LIB.


Fri Jul 7 16:37:07 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove explicit library handling and LDFLAGS.
	* configure.in - Add USE_KDB5_LIBRARY and KRB5_LIBRARIES


Thu Jun 15 18:10:55 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove DBMLIB.
	* configure.in - Remove check for dbm libraries.  Use shared library
		linking rules.

Fri Jun  9 18:58:15 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Fri Mar 31 17:05:49 1995  Theodore Y. Ts'o  (tytso@dcl)

	* kdb5_mkdums.c (add_princ): Zero out the entry before inserting it.

Thu Mar  2 12:34:37 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:32:20 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 01:24:52 1995  John Gilmore  (gnu at toad.com)

	* kdb5_mkdums.c:  Avoid <krb5/...> includes.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Sun Oct 23 00:50:07 1994    (tytso@rsx-11)

	* kdb5_mkdums.c (add_princ): Create principals with correct realm
		name. 

	* configure.in: Look for ndbm or dbm libraries

Thu Oct  6 12:41:28 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdb5_mkdums.c (main, set_dbname_help): Allow master key password
		to be passed in on the command line; to make testing
		scripts simpler.

	* kdb5_mkdums.c (add_princ): Initialize all the fields of the
		principal. 
