@@ -1,3 +1,8 @@
+
+Thu Jul 27 15:30:09 EDT 1995	Paul Park	(pjpark@mit.edu)
+	* kdb5_mkdums.c - Restore old logic to find the etype now that crypto-
+		conf.c is correctly generated.
+
 Thu Jul 27 02:59:05 1995        Chris Provenzano (proven@mit.edu)
         * kdb5_mkdums.c : Use new kdb format.
 
